--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Professionally, I'm recognized for my strong work ethic and skill in building positive relationships with colleagues. I'm highly adaptable and can smoothly transition into new work environments. I'm committed to excellence, ensuring flawless task execution within set schedules and high standards. </p>
     <hr/>
     <h2>Education</h2>
-    <ul><li>B.Tech in Pharmaceutical Engineering and Technology at IITBHU,Varanasi(2021-2025): Current CPI- 7.6</li></ul>
+    <ul><li>B.Tech in Pharmaceutical Engineering and Technology at IITBHU,Varanasi(2021-2025): <bold>Current CPI- 7.6</bold></li></ul>
     <hr/>
     <h2>Projects & Courses</h2>
     <ul><li>Exploratory Project(dept.)</li>
@@ -33,18 +33,18 @@
     <li>Hospitable</li></ul>
     <hr/>
     <h2>Position of Responsibilities</h2>
-    <ul><li>Induction Mentor'22</li>
+    <ul><li><bold>Induction Mentor'22</bold></li>
         <p>Towards the beginning of my Sophomore year, I mentored a total of 21 freshmen alongside my colleagues, assisting them in becoming acquainted with the campus and their academic field. Finally, we received positive feedback from the freshmen and established a good connection with them.
         </p>
-        <li>Squash Girl's Captain</li>
+        <li><bold>Squash Girl's Captain</bold></li>
         <p>Served as the female captain of the squash team in the college, supporting and assisting my teammates in any way I could, and contributing to the rise in female players at the squash club. 
         </p>
-        <li>Kashi Yatra'22: IITBHU's Annual Fest</li> 
+        <li><bold>Kashi Yatra'22: IITBHU's Annual Fest</bold></li> 
         <p>As a member of the logistics and operations team, I contributed to the festival's successful execution and took care of housing the more than 1000 guests who came to the college.</p>
-        <li>FMC'22: College Fest</li>
+        <li><bold>FMC'22: College Fest</bold></li>
         <p>In the festival, I worked in the social media club, where I helped manage the content and edit it, as well as increase the number of followers to 1000.
         </p>
-        <li>Spirit'22: College Departmental Fest</li>
+        <li><bold>Spirit'22: College Departmental Fest</bold></li>
         <p>Served as a member of the festival's logistics team and provided lodging for approximately 100 guests from various colleges who attended the festival. I assisted in looking after the guests' needs and requirements during the festival to ensure their comfort. </p>
         
     </ul>
@@ -54,13 +54,13 @@
     <ul>
         <li>In the Spardha college sports festival, I won a silver medal in squash.
         </li>
-        <li>Among the 100 college contingents, chosen to compete in the Inter IIT'22 (IITRoorkee)
+        <li>Among the 100 college contingents chosen to compete in the Inter IIT'22 (IIT Roorkee)
         </li>
     </ul>
     <hr/>
     <h2>Other</h2>
-    <ul><li>Contact Details: ✆ 8258872098, ✉︎ toko.yanu.phe21@itbhu.ac.in</li>
-    <li>Current address: IITBHU(Varanasi) Uttar Pradesh</li></ul>
+    <ul><li>Contact Details: <bold>✆ 8258872098, ✉︎ toko.yanu.phe21@itbhu.ac.in</bold></li>
+    <li>Current address: <bold>IITBHU(Varanasi)</bold> Uttar Pradesh</li></ul>
     <!-- <ul>
         <li><a href="./hobbies.html">My Hobbies</a></li>
         <li><a href="./about.html">Contact Me</a></li>
